--- a/app/page/navbar/Navbar.css
+++ b/app/page/navbar/Navbar.css
@@ -38,9 +38,9 @@
   font-weight: bold;
 }
 .logo-text {
-    font-size: 2.2rem;
+    color: #fff;
+    font-size: 1.5rem;
     font-weight: 800;
-    color: rgb(185, 67, 67);
 }
 
 .navbar-menu {
