--- a/app/page/login/auth.css
+++ b/app/page/login/auth.css
@@ -266,7 +266,8 @@
 }
 
 .label {
-  font-weight: 500;
+    font-weight: 500;
+    margin-top: 17px;
 }
 
 .login-container {
@@ -276,7 +277,6 @@
   from { opacity: 0; transform: translateY(10px); }
   to { opacity: 1; transform: translateY(0); }
 }
-
 
 
 /* ===========================
